--- a/app/src/main/res/layout/activity_pet_gender.xml
+++ b/app/src/main/res/layout/activity_pet_gender.xml
@@ -77,7 +77,7 @@
                     android:layout_height="105dp"
                     android:layout_gravity="center"
                     android:contentDescription="남자 선택"
-                    android:src="@drawable/gender_male_on" />
+                    android:src="@drawable/gender_male_off" />
             </FrameLayout>
 
             <ImageView
