--- a/app/src/main/res/layout/activity_ai_genetic.xml
+++ b/app/src/main/res/layout/activity_ai_genetic.xml
@@ -1,100 +1,173 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="24dp"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:padding="20dp">
 
-    <!-- 상단 제목 -->
-    <TextView
-        android:id="@+id/titleText"
-        android:layout_width="wrap_content"
+    <!-- 상단 내비게이션 -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_top_nav"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="유전병 검진노트"
-        android:textStyle="bold"
-        android:textSize="14sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="0dp" />
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <Button
+            android:id="@+id/btn_back"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:padding="8dp"
+            android:drawableStart="@drawable/ic_arrow_back"
+            android:text=""
+            android:contentDescription="뒤로 가기"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="유전병 검진노트"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!-- 설명 텍스트 -->
     <TextView
-        android:id="@+id/desc1"
+        android:id="@+id/tv_dec"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="AI가 알려주는\n우리 아이의 DNA 힌트!"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:layout_marginTop="12dp"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/titleText"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="AI가 알려주는\n우리 아이의 DNA 힌트!"
+        android:textSize="28sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="12dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/layout_top_nav" />
 
     <!-- 이미지 박스 -->
     <FrameLayout
-        android:id="@+id/imageCard"
-        android:layout_width="350dp"
-        android:layout_height="350dp"
-        app:layout_constraintTop_toBottomOf="@id/desc1"
-        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/imgCard"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="24dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_dec">
 
         <!-- 배경 프레임 -->
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerInside"
             android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
             android:src="@drawable/ic_button_container" />
 
-        <ImageView
-            android:layout_width="340dp"
-            android:layout_height="320dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_star_gradient" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:cardCornerRadius="30dp"
+            app:cardElevation="0dp"
+            android:layout_margin="14dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="true">
+            <ImageView
+                android:id="@+id/iv_photo_frame"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/img_shadow" />
+        </androidx.cardview.widget.CardView>
+
     </FrameLayout>
 
-    <!-- 앨범/카메라 버튼 묶음 -->
     <LinearLayout
-        android:id="@+id/imageButtons"
+        android:id="@+id/layout_buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:gravity="center"
-        android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@id/imageCard"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/btn_next"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/imgCard">
 
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
-            android:src="@drawable/ic_album" />
+            android:gravity="center"
+            android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            <ImageButton
+                android:id="@+id/btn_album"
+                android:layout_width="84dp"
+                android:layout_height="64dp"
+                android:background="@drawable/btn_round_background"
+                android:contentDescription="앨범 버튼"
+                android:padding="14dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_album" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="앨범"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:src="@drawable/ic_camera" />
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/btn_carmera"
+                android:layout_width="84dp"
+                android:layout_height="64dp"
+                android:background="@drawable/btn_round_background"
+                android:contentDescription="카메라 버튼"
+                android:padding="12dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_camera" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="카메라"
+                android:textSize="20sp" />
+        </LinearLayout>
     </LinearLayout>
 
-    <!-- 다음 버튼 -->
-    <ImageButton
-        android:id="@+id/nextButton"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginBottom="24dp"
-        android:src="@drawable/btn_next"
-        android:background="@android:color/transparent"
-        android:scaleType="fitCenter"
-        android:enabled="false"
+    <Button
+        android:id="@+id/btn_next"
+        android:layout_width="match_parent"
+        android:layout_height="74dp"
+        android:layout_marginBottom="16dp"
+        android:text="우리 아이의 과거로!"
+        android:textSize="20dp"
+        android:textColor="@color/btn_next_text_selector"
+        android:background="@drawable/btn_next"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:enabled="false" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
