--- a/app/src/main/res/layout/item_info_genetic.xml
+++ b/app/src/main/res/layout/item_info_genetic.xml
@@ -13,17 +13,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:paddingVertical="14dp"
+        android:paddingHorizontal="24dp">
 
         <!-- 상단 타이틀 -->
         <TextView
-            android:id="@+id/titleText"
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="견종 2의 유전병 정보"
-            android:textStyle="bold"
-            android:textSize="14sp"
+            android:textSize="18sp"
             android:textColor="#000000"
+            android:includeFontPadding="false"
             android:layout_marginBottom="12dp" />
 
         <LinearLayout
@@ -32,22 +33,22 @@
             android:orientation="horizontal" >
 
             <ImageView
-                android:id="@+id/infoImage"
-                android:layout_width="56dp"
-                android:layout_height="56dp"
+                android:id="@+id/img_info"
+                android:layout_width="74dp"
+                android:layout_height="74dp"
                 android:layout_marginEnd="12dp"
                 android:src="@drawable/ic_star_gradient"
                 android:scaleType="centerCrop"
                 android:backgroundTint="#DDDDDD"/>
             <TextView
-                android:id="@+id/descText"
+                android:id="@+id/tv_des"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="유전병 설명이 들어갑니다 줄이 길어지면 자동으로 크기에ㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁ"
-                android:maxLines="2"
-                android:textSize="12sp"
+                android:text="유전병 설명이 들어갑니다 줄이 길어지면 자동으로 크기에ㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁ"
+                android:textSize="14sp"
                 android:textColor="#333333"
+                android:includeFontPadding="false"
                 android:gravity="center_vertical" />
         </LinearLayout>
     </LinearLayout>
