--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="32dp"
@@ -9,32 +10,38 @@
     android:paddingEnd="16dp">
 
     <!-- 동그란 배경 -->
+    <!-- 동그란 배경 -->
     <ImageView
         android:id="@+id/circleBackground"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
         android:src="@drawable/ic_circle_border"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- 강아지 아이콘 -->
+    <!-- 강아지 아이콘(프로필 이미지) -->
     <ImageView
         android:id="@+id/dogIcon"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:src="@drawable/ic_dog_icon"
+        android:scaleType="centerCrop"
         app:layout_constraintTop_toTopOf="@id/circleBackground"
         app:layout_constraintBottom_toBottomOf="@id/circleBackground"
         app:layout_constraintStart_toStartOf="@id/circleBackground"
         app:layout_constraintEnd_toEndOf="@id/circleBackground" />
 
-    <!-- 이름 텍스트 이미지 -->
-    <ImageView
+
+    <!-- 이름 텍스트 -->
+    <TextView
         android:id="@+id/nameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:src="@drawable/ic_name_text"
+        android:text="멍멍이 이름"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/circleBackground"
         app:layout_constraintTop_toTopOf="@id/circleBackground"
         app:layout_constraintBottom_toBottomOf="@id/circleBackground" />
@@ -50,23 +57,27 @@
         app:layout_constraintBottom_toBottomOf="@id/nameText"
         app:layout_constraintStart_toEndOf="@id/nameText" />
 
+
     <!-- 오른쪽 상단 계정 아이콘 -->
-    <ImageView
-        android:id="@+id/accountIcon"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:src="@drawable/ic_account_top_right"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- 건강수첩 -->
+
+    <ImageView
+        android:id="@+id/accountIcon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="4dp"
+        android:src="@drawable/ic_account_top_right"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/healthLogbook"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
         android:text="건강수첩"
-        android:textSize="30sp"
+        android:textSize="25sp"
         android:textStyle="bold"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="@id/circleBackground"
@@ -84,29 +95,31 @@
         app:layout_constraintTop_toBottomOf="@id/healthLogbook"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/btnGeneticNote"
-        app:layout_constraintHorizontalWeight="1">
+        app:layout_constraintHorizontal_chainStyle="spread_inside">
 
-        <ImageView
+        <TextView
             android:id="@+id/smartCheckText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-
-            android:src="@drawable/ic_smart_check_text"
-            android:layout_gravity="top|start" />
+            android:layout_gravity="top|start"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:text="AI 스마트\n간편 검진"
+            android:textColor="@android:color/white"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:lineSpacingExtra="2dp" />
 
         <ImageView
             android:id="@+id/smartCheckIcon"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_gravity="bottom|end"
             android:layout_margin="12dp"
-            android:src="@drawable/ic_smart_check_icon"
-            android:layout_gravity="bottom|end" />
+            android:src="@drawable/ic_smart_check_icon" />
     </FrameLayout>
 
-    <!-- 유전 노트 버튼 -->
-
-    <!-- 산책 기록 버튼 -->
+    <!-- 유전자 노트 버튼 -->
     <FrameLayout
         android:id="@+id/btnGeneticNote"
         android:layout_width="0dp"
@@ -116,18 +129,22 @@
         android:background="@drawable/bg_btn_genetic_note"
         android:clickable="true"
         android:focusable="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontalWeight="1"
         app:layout_constraintStart_toEndOf="@id/btnSmartCheck"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/healthLogbook">
 
-        <ImageView
+        <TextView
             android:id="@+id/geneticNoteText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|start"
-            android:layout_margin="12dp"
-            android:src="@drawable/ic_genetic_note_text" />
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:text="유전자 노트"
+            android:textColor="@android:color/white"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:lineSpacingExtra="2dp" />
 
         <ImageView
             android:id="@+id/geneticNoteIcon"
@@ -138,6 +155,7 @@
             android:src="@drawable/ic_genetic_note_icon" />
     </FrameLayout>
 
+    <!-- 산책 일지 버튼 -->
     <FrameLayout
         android:id="@+id/btnWalkLog"
         android:layout_width="0dp"
@@ -150,13 +168,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <ImageView
+        <TextView
             android:id="@+id/walkLogText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:src="@drawable/ic_walk_log_text"
-            android:layout_gravity="top|start" />
+            android:layout_gravity="top|start"
+            android:text="멍멍이 이름의 산책 일지"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@android:color/white"
+            android:maxLines="2" />
 
         <ImageView
             android:id="@+id/walkLogIcon"
