--- a/app/src/main/res/layout/activity_pet_name.xml
+++ b/app/src/main/res/layout/activity_pet_name.xml
@@ -1,142 +1,120 @@
-    <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white">
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:padding="24dp">
 
-        <!-- 나중에 등록하기 버튼 -->
+    <!-- 나중에 등록하기 버튼 (상단 오른쪽 살짝 아래로 이동) -->
+    <ImageView
+        android:id="@+id/imgRegisterLater"
+        android:layout_width="100dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:focusable="true"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        android:src="@drawable/ic_register_later"
+        android:contentDescription="나중에 등록하기"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- 진행 바 -->
+    <FrameLayout
+        android:id="@+id/progressContainer"
+        android:layout_width="100dp"
+        android:layout_height="4dp"
+        android:layout_marginTop="60dp"
+        app:layout_constraintTop_toBottomOf="@id/imgRegisterLater"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
-            android:id="@+id/imgRegisterLater"
-            android:layout_width="100dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="24dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:clickable="true"
-            android:contentDescription="나중에 등록하기"
-            android:focusable="true"
-            android:paddingTop="6dp"
-            android:paddingBottom="6dp"
-            android:src="@drawable/ic_register_later"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <!-- 힌트 텍스트 -->
-
-        <!-- 밑줄 -->
+            android:id="@+id/progressBg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_step_progress_bar1" />
 
         <ImageView
-            android:id="@+id/imgPetNameTitle"
+            android:id="@+id/progressFill"
             android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:src="@drawable/ic_progress_filled" />
+    </FrameLayout>
+
+    <!-- 입력 타이틀 -->
+    <ImageView
+        android:id="@+id/imgPetNameTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/enter_pet_name_label"
+        android:contentDescription="아이 이름 입력 타이틀"
+        app:layout_constraintTop_toBottomOf="@id/progressContainer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- 이름 입력 컨테이너 -->
+    <FrameLayout
+        android:id="@+id/nameInputContainer"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@id/imgPetNameTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:id="@+id/hintText"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:contentDescription="아이 이름 입력 타이틀"
-            android:src="@drawable/enter_pet_name_label"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/progressContainer" />
+            android:layout_gravity="center"
+            android:src="@drawable/hint_enter_name"
+            android:visibility="visible"
+            android:contentDescription="아이 이름 힌트" />
 
-        <FrameLayout
-            android:id="@+id/nameInputContainer"
-            android:layout_width="281dp"
+        <EditText
+            android:id="@+id/edtPetName"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="56dp"
-            app:layout_constraintTop_toBottomOf="@+id/imgPetNameTitle"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            android:layout_gravity="center"
+            android:hint="이름을 입력하세요"
+            android:background="@null"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:gravity="center"
+            android:maxLines="1"
+            android:inputType="textPersonName"
+            android:visibility="invisible"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp" />
 
-            <!-- 힌트 이미지 (처음 보이는 라벨) -->
-            <ImageView
-                android:id="@+id/hintText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/hint_enter_name"
-                android:contentDescription="아이 이름 힌트"
-                android:layout_gravity="center"
-                android:visibility="visible"/>
-
-            <!-- 이름 입력창 (EditText) -->
-            <EditText
-                android:id="@+id/edtPetName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="이름을 입력하세요"
-                android:background="@null"
-                android:paddingTop="2dp"
-                android:paddingBottom="2dp"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                android:gravity="center"
-                android:maxLines="1"
-                android:inputType="textPersonName"
-                android:layout_gravity="center"
-                android:visibility="invisible"/>
-
-            <!-- 밑줄 -->
-            <ImageView
-                android:id="@+id/underline"
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:layout_marginTop="32dp"
-                android:layout_gravity="bottom"
-                android:src="@drawable/bg_input_underline"/>
-        </FrameLayout>
-
-
-        <FrameLayout
-            android:id="@+id/progressContainer"
-            android:layout_width="100dp"
+        <ImageView
+            android:id="@+id/underline"
+            android:layout_width="match_parent"
             android:layout_height="4dp"
-            android:layout_marginTop="120dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.501"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imgRegisterLater">
+            android:layout_marginTop="32dp"
+            android:layout_gravity="bottom"
+            android:src="@drawable/bg_input_underline" />
+    </FrameLayout>
 
-            <!-- 트랙 배경 -->
-            <ImageView
-                android:id="@+id/progressBg"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_step_progress_bar1" />
+    <!-- 다음 버튼 -->
+    <ImageButton
+        android:id="@+id/btnNext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:background="@null"
+        android:contentDescription="다음"
+        android:src="@drawable/ic_arrow_forward"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-            <!-- 채워진 진행 트랙 -->
-            <ImageView
-                android:id="@+id/progressFill"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="start"
-                android:src="@drawable/ic_progress_filled" />
-        </FrameLayout>
-
-
-
-        <!-- 이전 버튼 -->
-        <ImageButton
-            android:id="@+id/btnPrev"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:background="@null"
-            android:contentDescription="이전"
-            android:src="@drawable/ic_arrow_back2"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btnNext" />
-
-        <!-- 다음 버튼 -->
-        <ImageButton
-            android:id="@+id/btnNext"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:background="@null"
-            android:contentDescription="다음"
-            android:src="@drawable/ic_arrow_forward"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btnPrev"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
