--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.PETDoc" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Base.Theme.PETDoc" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- 전체 앱 폰트 적용 -->
         <item name="android:fontFamily">@font/notosanskr_medium</item>
         <item name="fontFamily">@font/notosanskr_medium</item>
@@ -8,4 +7,5 @@
     </style>
 
     <style name="Theme.PETDoc" parent="Base.Theme.PETDoc" />
+
 </resources>
