fix. Material 스타일로 변경에 따른 Button -> ImageButton으로 변경

--- a/app/src/main/res/layout/activity_ai_genetic.xml
+++ b/app/src/main/res/layout/activity_ai_genetic.xml
@@ -16,21 +16,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_back"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_margin="8dp"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:padding="8dp"
-            android:drawableStart="@drawable/ic_arrow_back"
-            android:text=""
+            android:src="@drawable/ic_arrow_back"
             android:contentDescription="뒤로 가기"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
+
 
         <TextView
             android:id="@+id/tv_title"
@@ -167,7 +164,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:enabled="false" />
+        android:enabled="true" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
