--- a/app/src/main/res/layout/activity_all_info_genetic.xml
+++ b/app/src/main/res/layout/activity_all_info_genetic.xml
@@ -16,17 +16,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_back"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_margin="8dp"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:padding="8dp"
-            android:drawableStart="@drawable/ic_arrow_back"
-            android:text=""
+            android:src="@drawable/ic_arrow_back"
             android:contentDescription="뒤로 가기"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
