--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,16 +16,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498" />
 
-    <!-- 산책 일지 아이콘 -->
-    <ImageView
-        android:id="@+id/walkLogIcon"
-        android:layout_width="155dp"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/iconSlider"
+        android:layout_width="279dp"
         android:layout_height="106dp"
         android:layout_marginTop="32dp"
-        android:src="@drawable/ic_walk_log"
         app:layout_constraintTop_toBottomOf="@id/logoTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
 
     <!-- Google 로그인 버튼 -->
     <ImageButton
